--- a/basics/templates/basics/information_new.html
+++ b/basics/templates/basics/information_new.html
@@ -13,7 +13,7 @@
 					{% if messages %}
                         {% for message in messages %}
                             {% if message.message == 'not_valid' %}
-                                <div class="col-sm-12" id="standard-notification">
+                                <div class="error-messages">
                                     <p>Please fill in all fields!</p>
                                 </div>
                             {% endif %}
