--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -14,7 +14,7 @@
                         {% if messages %}
                             {% for message in messages %}
                                 {% if message.message == 'not_valid' %}
-                                    <div class="col-sm-12" id="standard-notification">
+                                    <div class="error-messages">
                                         <p>Please fill in all fields!</p>
                                     </div>
                                 {% endif %}
@@ -24,7 +24,7 @@
                         {% if messages %}
                             {% for message in messages %}
                                 {% if message.message == 'no_headline' %}
-                                    <div class="col-sm-12" id="standard-notification">
+                                    <div class="error-messages">
                                         <p>Please type in an headline!</p>
                                     </div>
                                 {% endif %}
@@ -43,7 +43,7 @@
                         {% if messages %}
                             {% for message in messages %}
                                 {% if message.message == 'no_text' %}
-                                    <div class="col-sm-12" id="standard-notification">
+                                    <div class="error-messages">
                                         <p>Please type in an description!</p>
                                     </div>
                                 {% endif %}
