--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -88,10 +88,75 @@
                                         {% if not user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all %}
                                             <div class="row">
                                                 <a class="list-group-footer-button" type="button" href="{% url 'basics:like_information' pk=info.id %}">
+                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
+                                                    </div>
+                                                </a>
+                                                {% if user.userdata in info.followed_by %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% else %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:report_information' pk=info.id%}">
+                                                    <div class="col-sm-3">
+                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all  %}
+                                            <div class="row">
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:like_information' pk=info.id %}">
                                                     <div class="col-sm-4" id="list-group-footer-button-margin">
                                                         <span class="glyphicon glyphicon-chevron-up"></span> Upvote
                                                     </div>
                                                 </a>
+                                                {% if user.userdata in info.followed_by %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% else %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-4">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif not user.userdata in info.reported_by.all and user.userdata in info.liked_by.all  %}
+                                            <div class="row">
+                                                {% if user.userdata in info.followed_by %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% else %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
                                                 <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
                                                     <div class="col-sm-4" id="list-group-footer-button-margin">
                                                         <span class="glyphicon glyphicon-comment"></span> Comment
@@ -103,36 +168,23 @@
                                                     </div>
                                                 </a>
                                             </div>
-                                        {% elif user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all  %}
-                                            <div class="row">
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:like_information' pk=info.id %}">
-                                                    <div class="col-sm-6" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                    <div class="col-sm-6">
-                                                        <span class="glyphicon glyphicon-comment"></span> Comment
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        {% elif not user.userdata in info.reported_by.all and user.userdata in info.liked_by.all  %}
-                                            <div class="row">
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                    <div class="col-sm-6" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-comment"></span> Comment
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:report_information' pk=info.id%}">
-                                                    <div class="col-sm-6">
-                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
-                                                    </div>
-                                                </a>
-                                            </div>
                                         {% else %}
                                             <div class="row">
+                                                {% if user.userdata in info.followed_by %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% else %}
+                                                    <a class="list-group-footer-button" type="button" href="">
+                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
                                                 <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                    <div class="col-sm-12">
+                                                    <div class="col-sm-6">
                                                         <span class="glyphicon glyphicon-comment"></span> Comment
                                                     </div>
                                                 </a>
