--- a/basics/templates/snippets/claim_needs.html
+++ b/basics/templates/snippets/claim_needs.html
@@ -1,7 +1,7 @@
 {% load filter%}    
                       {% if needs %}
                           {% for need in needs %}
-
+                          <div id="divneed{{need.pk}}">
                               <!-- list all needs -->
                               <div class="row">
                                   <div class="col-sm-12">
@@ -18,28 +18,35 @@
                               </a>
 
                               <div class="list-group-footer" style="margin-bottom: 15px;">
-                                      <div class="row">
-                                          <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
-                                              <div class="col-sm-6" id="list-group-footer-button-margin">
-                                                  <span class="glyphicon glyphicon-comment"></span> Help
-                                              </div>
-                                          </a>
-                                          {% if not user.userdata in need.reported_by.all %}
-                                          <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}"" onclick="report({{need.pk}})"">
-                                              <div class="col-sm-6">
-                                                  <span class="glyphicon glyphicon-ban-circle"></span>Report
-                                              </div>
-                                          </a>
-                                          {% endif %}
-                                      </div>
-
+                                     {% if not user.userdata in need.reported_by.all %}
+                                        <div class="row">
+                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
+                                                <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                    <span class="glyphicon glyphicon-comment"></span> Help
+                                                </div>
+                                            </a>
+                                             <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}"" onclick="report({{need.pk}})"">
+                                                <div class="col-sm-6">
+                                                     <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                                </div>
+                                            </a>
+                                        </div>
+                                     {% else %}
+                                         <div class="row">
+                                             <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
+                                                 <div class="col-sm-12">
+                                                     <span class="glyphicon glyphicon-comment"></span> Help
+                                                 </div>
+                                             </a>
+                                         </div>
+                                     {% endif %}
                               </div>
 
                                   </div>
                               </div>
 
                               <!-- modal for every need -->
-                              <div class="modal fade {{ need.id }}"  role="dialog" aria-labelledby="request" aria-hidden="true">
+                              <div class="modal {{ need.id }}" role="dialog" aria-labelledby="request" aria-hidden="true">
                                   <div class="modal-dialog modal-lg">
                                       <div class="modal-content">
                                           <div class="modal-header">
@@ -55,12 +62,13 @@
                                           <div class="modal-footer">
                                               <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
                                               {% if not user.userdata in need.reported_by.all %}
-                                                <button  type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})"" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
+                                                <button  type="button" id="standard-grey-button-bold" data-dismiss="modal" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})"" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
                                               {% endif %}
                                               <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
                                           </div>
                                       </div>
                                   </div>
+                              </div>
                               </div>
                           {% empty %}
                               <h4>There are no needs.</h4>
