--- a/basics/templates/basics/group_detail_for_user.html
+++ b/basics/templates/basics/group_detail_for_user.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="modal-body">
-            <div class="list-group-item" id="standard-list-group-item-white-div" style="padding-top: 30px;">
+            <div class="list-group-item" id="standard-list-group-item-white-div" style="padding-top: 15px; padding-bottom: 15px;">
                 <div class="row" style="margin-bottom: 15px;">
                     <div class="col-sm-6">
                         <div class="row">
@@ -81,7 +81,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <p id="description-label">Location of Head Office:</p>
-                            <div id="map-container" style="height: 40%; margin-top: 15px; margin-bottom: 20px;"></div>
+                            <div id="map-container" style="height: 40%; margin-top: 15px; border: 1px solid #ddd;"></div>
                         </div>
                     </div>
                 {% endif %}
