--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -19,9 +19,11 @@
             </div>
         </div>
         <div class="modal-body">
-            <p style="word-wrap: break-word;">{{ information.text | linebreaksbr }}</p>
-            <h5><i>Location:</i></h5>
-            <div id="map-container" style="height: 450px; margin-top: 15px; margin-bottom: 20px;"></div>
+            <div class="list-group-item" id="standard-list-group-item-white-div" style="padding-top: 15px; padding-bottom: 15px; margin-bottom: 20px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;">
+                <p style="word-wrap: break-word;">{{ information.text | linebreaksbr }}</p>
+                <h5><i>Location:</i></h5>
+                <div id="map-container" style="height: 40%; margin-top: 15px;  border: 1px solid #ddd;"></div>
+            </div>
             <div class="list-group">
                 <div class="row">
                     <div class="col-sm-10 col-sm-offset-1">
