--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -273,28 +273,27 @@
                     {% for elem in result_list %}
 
                         <div class="modal fade" id="myModal" role="dialog">
-                        <div class="modal-dialog">
+                            <div class="modal-dialog">
 
-                         <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Delete Your Need</h4>
-                                 </div>
-                                <div class="modal-body">
-                                    <p>If you delete This Need, the data will be permanently lost.</p>
-                                    <p>Would you like to rethink your decision?</p>
+                             <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Delete Your Need</h4>
+                                     </div>
+                                    <div class="modal-body">
+                                        <p>If you delete This Need, the data will be permanently lost.</p>
+                                        <p>Would you like to rethink your decision?</p>
+                                    </div>
+                                     <div class="modal-footer">
+                                        <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
+                                        <a id="standard-grey-button-light" type="button" class="btn btn-default" href="{% url 'basics:need_delete' pk=elem.pk %}">
+                                            <span class="glyphicon glyphicon-remove"></span> Delete
+                                        </a>
+                                     </div>
                                 </div>
-                                 <div class="modal-footer">
-                                     <a type="button" class="btn btn-default" href="{% url 'basics:need_delete' pk=elem.pk %}">
 
-                                                    <span class="glyphicon glyphicon-remove"></span> Delete
-                                                </a>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">Rethink</button>
-                                 </div>
                             </div>
-
-                        </div>
                         </div>
 
                         {% if elem in infos %}
