--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -138,11 +138,11 @@
                                     <p>Would you like to rethink your decision?</p>
                                 </div>
                                  <div class="modal-footer">
-                                     <a type="button" class="btn btn-default" href="{% url 'administration:categories_delete' pk=categ.pk %}">
+                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'administration:categories_delete' pk=categ.pk %}">
 
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </a>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">Rethink</button>
+                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
                                  </div>
                             </div>
 
@@ -179,11 +179,11 @@
                                     <p>Would you like to rethink your decision?</p>
                                 </div>
                                  <div class="modal-footer">
-                                     <a type="button" class="btn btn-default" href="{% url 'administration:categories_delete' pk=categorie.pk %}">
+                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'administration:categories_delete' pk=categorie.pk %}">
 
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </a>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">Rethink</button>
+                                    <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
                                  </div>
                             </div>
 
