--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -45,11 +45,11 @@
                                     <p>Would you like to rethink your decision?</p>
                                 </div>
                                  <div class="modal-footer">
-                                     <a type="button" class="btn btn-default" href="{% url 'basics:information_delete_comment' pk_inf=information.pk pk_comm=comment.pk %}">
+                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'basics:information_delete_comment' pk_inf=information.pk pk_comm=comment.pk %}">
 
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </a>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">Rethink</button>
+                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
                                  </div>
                             </div>
 
