--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -81,11 +81,11 @@
                                     <p>Would you like to rethink your decision?</p>
                                 </div>
                                  <div class="modal-footer">
-                                     <a type="button" class="btn btn-default" href="{% url 'basics:profil_delete' %}">
+                                     <a type="button" id="standard-grey-button-light" type="button" class="btn btn-default" href="{% url 'basics:profil_delete' %}">
 
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </a>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">Rethink</button>
+                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
                                  </div>
                             </div>
 
