--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -155,18 +155,18 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Delete This group</h4>
+                                    <h4 class="modal-title">Delete This Group</h4>
                                  </div>
                                 <div class="modal-body">
                                     <p>If you delete this group, the data will be permanently lost.</p>
                                     <p>Would you like to rethink your decision?</p>
                                 </div>
                                  <div class="modal-footer">
-                                     <a type="button" class="btn btn-default" href="{% url 'administration:group_delete' pk=gro.pk %}">
+                                     <a id="standard-grey-button-light" type="button" class="btn btn-default" href="{% url 'administration:group_delete' pk=gro.pk %}">
 
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </a>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">Rethink</button>
+                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
                                  </div>
                             </div>
 
@@ -197,18 +197,18 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Delete This group</h4>
+                                    <h4 class="modal-title">Delete This Group</h4>
                                  </div>
                                 <div class="modal-body">
                                     <p>If you delete this group, the data will be permanently lost.</p>
                                     <p>Would you like to rethink your decision?</p>
                                 </div>
                                  <div class="modal-footer">
-                                     <a type="button" class="btn btn-default" href="{% url 'administration:group_delete' pk=group.pk %}">
+                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'administration:group_delete' pk=group.pk %}">
 
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </a>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">Rethink</button>
+                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
                                  </div>
                             </div>
 
