--- a/administration/templates/administration/information.html
+++ b/administration/templates/administration/information.html
@@ -57,6 +57,31 @@
                 {% if infos %}
                     {% for info in infos %}
 
+
+                        <div class="modal fade" id="deleteModal" role="dialog">
+                            <div class="modal-dialog">
+
+                             <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Delete This Information</h4>
+                                     </div>
+                                    <div class="modal-body">
+                                        <p>If you delete This information, the data will be permanently lost.</p>
+                                        <p>Would you like to rethink your decision?</p>
+                                    </div>
+                                     <div class="modal-footer">
+                                        <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
+                                        <a id="standard-grey-button-light" type="button" class="btn btn-default" href="{% url 'administration:information_delete' pk=info.pk %}">
+                                            <span class="glyphicon glyphicon-remove"></span> Delete
+                                        </a>
+                                     </div>
+                                </div>
+
+                            </div>
+                        </div>
+
                     <!-- list all information -->
                     <div class="list-group-item" id="standard-list-group-item-div">
                         <div class="row">
@@ -72,7 +97,7 @@
                                 </div>
                             </a>
                             <div class="col-sm-1">
-                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light " style="float: right; margin-top: 10px;" onclick="location.href='{% url 'administration:information_delete' pk=info.pk %}'"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light " style="float: right; margin-top: 10px;" data-toggle="modal" data-target="#deleteModal"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                             </div>
                         </div>
                     </div>
@@ -84,6 +109,8 @@
 
                 {% if comments %}
                     {% for comment in comments %}
+
+
                         <!-- list all information -->
                         <div class="list-group-item" id="standard-list-group-item-div">
                             <div class="row">
