--- a/basics/templates/basics/group_detail.html
+++ b/basics/templates/basics/group_detail.html
@@ -115,6 +115,32 @@
             <h2 class="text-center" id="standard-modal-headline">{{group.name}}<br><small>This organisation represents a {% if group.is_GO %} governmental organisation. {% else %} nongovernmental organisation. {% endif %}</small></h2>
         </div>
         <div class="modal-body">
+            <div class="modal fade" id="groupLeave" role="dialog">
+                            <div class="modal-dialog">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Leave This Group</h4>
+                                 </div>
+                                <div class="modal-body">
+                                    <p>If you leave this group, you will not be able to become a member unless you are invited again!</p>
+                                    <p>Would you like to rethink your decision?</p>
+                                </div>
+                                 <div class="modal-footer">
+                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'basics:group_leave' pk=group.pk %}">
+
+                                                    <span class="glyphicon glyphicon-remove"></span> Delete
+                                                </a>
+                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
+                                 </div>
+                            </div>
+
+                            </div>
+                            </div>
+
+
 
             <div class="row" style="margin-top: 15px;">
                 <div class="col-sm-12">
@@ -129,7 +155,7 @@
                                 <span class="glyphicon glyphicon-pencil"></span> Edit Profile
                             </div>
                         </a>
-                        <a id="button3" class="list-group-footer-button cursor-pointer" type="button" href="{% url 'basics:group_leave' pk=group.pk %}">
+                        <a id="button3" class="list-group-footer-button cursor-pointer" type="button" data-toggle="modal" data-target="#groupLeave" >
                             <div class="col-sm-4">
                                 <span class="glyphicon glyphicon-log-out"></span> Leave Organisation
                             </div>
